--- a/Successful/src/NewJframe/DictionaryJframe.form
+++ b/Successful/src/NewJframe/DictionaryJframe.form
@@ -145,6 +145,9 @@
           <Image iconType="3" name="/Image/Sound.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="dButton2MouseReleased"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="290" y="60" width="40" height="35"/>
