--- a/Successful/src/NewJframe/Edit.form
+++ b/Successful/src/NewJframe/Edit.form
@@ -5,7 +5,7 @@
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Edit"/>
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
-      <Point value="[450, 150]"/>
+      <Point value="[520, 220]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -87,6 +87,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="ETextField1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="99" red="99" type="rgb"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ETextField1ActionPerformed"/>
       </Events>
@@ -105,6 +110,9 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="ETextArea1">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="99" green="99" red="99" type="rgb"/>
+            </Property>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
