--- a/Successful/src/NewJframe/Insert.form
+++ b/Successful/src/NewJframe/Insert.form
@@ -5,7 +5,7 @@
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Insert"/>
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
-      <Point value="[450, 150]"/>
+      <Point value="[520, 220]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -82,6 +82,9 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="ITextArea1">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="99" green="99" red="99" type="rgb"/>
+            </Property>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
@@ -110,6 +113,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="ITextField1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="99" red="99" type="rgb"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
